fixed the layout so that portrait videos dont cut off the bookmark labels

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ body {
 }
 
 .video-player-add-button-container button {
+  box-sizing: border-box;
   background-color: #444;
   border: none;
   color: white;
@@ -60,7 +61,7 @@ body {
   flex-direction: row;
 
   width: 100%;
-  height: 95%;
+  height: 90%;
 }
 
 .video-container {
@@ -91,6 +92,7 @@ video {
 }
 
 .controls-basic-container {
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,6 +102,7 @@ video {
 }
 
 .controls-basic-container button {
+  box-sizing: border-box;
   background-color: #444;
   border: none;
   color: white;
@@ -126,6 +129,7 @@ video {
 }
 
 .button-row {
+  box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -135,6 +139,7 @@ video {
 
 .playback-rate,
 .clock-time {
+  box-sizing: border-box;
   color: #ffffff;
   padding: 0 10px;
 }
@@ -156,6 +161,7 @@ video {
 }
 
 .button-container button {
+  box-sizing: border-box;
   background-color: #444;
   border: none;
   color: white;
@@ -178,6 +184,7 @@ video {
 }
 
 .flyout {
+  box-sizing: border-box;
   flex-direction: column;
   position: absolute;
   top: 40px;
@@ -190,6 +197,7 @@ video {
 }
 
 .flyout button {
+  box-sizing: border-box;
   background-color: #555;
   border: none;
   color: white;
@@ -205,6 +213,7 @@ video {
 }
 
 .bookmark-overlay {
+  box-sizing: border-box;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -224,6 +233,7 @@ video {
 }
 
 .bookmark-overlay input {
+  box-sizing: border-box;
   padding: 10px;
   margin-bottom: 10px;
   border-radius: 5px;
@@ -233,6 +243,7 @@ video {
 }
 
 .bookmark-overlay button {
+  box-sizing: border-box;
   background-color: #444;
   border: none;
   color: white;
@@ -255,6 +266,7 @@ video {
 }
 
 .bookmark-overlay li {
+  box-sizing: border-box;
   background-color: #333;
   padding: 10px;
   margin-bottom: 5px;
@@ -265,6 +277,7 @@ video {
 }
 
 .bookmark-overlay li button {
+  box-sizing: border-box;
   background-color: #444;
   border: none;
   color: white;
@@ -280,6 +293,7 @@ video {
 }
 
 .open-file-overlay {
+  box-sizing: border-box;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -299,6 +313,7 @@ video {
 }
 
 .open-file-overlay input {
+  box-sizing: border-box;
   padding: 10px;
   margin-bottom: 10px;
   border-radius: 5px;
@@ -308,6 +323,7 @@ video {
 }
 
 .open-file-overlay button {
+  box-sizing: border-box;
   background-color: #444;
   border: none;
   color: white;
